Nebula Logger/main/default/objects/LoggerSObjectHandlerParameter__mdt/fields/CollectionType__c.field-meta.xml
<CustomField>
    <fullName>CollectionType__c</fullName>
    <description>The expected collection type of the parameter. For example, String vs List&lt;String&gt;</description>
    <inlineHelpText>The expected collection type of the parameter. For example, String vs List&lt;String&gt;</inlineHelpText>
    <label>Collection Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>