Nebula Logger/main/default/objects/LoggerSObjectHandlerParameter__mdt/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <description>The expected data type of the parameter value</description>
    <inlineHelpText>The expected data type of the parameter value</inlineHelpText>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>SObject</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>