Nebula Logger/main/default/objects/LoggerSObjectHandlerParameter__mdt/fields/SObjectHandler__c.field-meta.xml
<CustomField>
    <fullName>SObjectHandler__c</fullName>
    <label>SObject Handler</label>
    <referenceTo>LoggerSObjectHandler__mdt</referenceTo>
    <relationshipLabel>Logger SObject Handler Parameters</relationshipLabel>
    <relationshipName>LoggerSObjectHandlerParameters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>